# django-simple-idempotency

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
simple_idempotency/: __init__.py  decorators.py  locks.py  settings.py  storages.py  utils.py
