[tool.poetry]
name = "simple_idempotency"
version = "0.1.0"
description = ""
authors = ["Your Name <maaz1313@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"
djangorestframework = "^3.12.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.10.1"
flake8 = "^3.8.4"
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.7.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
